sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:10: error: not found: value j
    setValue(j,value);
             ^AlgInsertionSort:10: error: not found: value value
    setValue(j,value);
               ^